--- a/TestGroup/CompanyEmployees/CompanyEmployees/Properties/launchSettings.json
+++ b/TestGroup/CompanyEmployees/CompanyEmployees/Properties/launchSettings.json
@@ -12,11 +12,11 @@
     "CompanyEmployees": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7030;http://localhost:5152",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production" // "Development" // Production
       }
     },
     "IIS Express": {
