--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /TestGroup/Asp.Net Core/Chapter4/Chapter4.WebAPi/internal_logs
+/TestGroup/Asp.Net Core/Chapter5/Chaper5.WebApi/internal_logs/internallog.txt
