--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 /TestGroup/Asp.Net Core/Chapter4/Chapter4.WebAPi/internal_logs
 /TestGroup/Asp.Net Core/Chapter5/Chaper5.WebApi/internal_logs/internallog.txt
 /TestGroup/Asp.Net Core/Chapter7/Chapter7.WebApi/internal_logs/internallog.txt
+/TestGroup/Asp.Net Core/Chapter9/Chapter9.WebApi/internal_logs/internallog.txt
