--- a/TestGroup/Asp.Net Core/Bonus/Application/Application/Application.csproj
+++ b/TestGroup/Asp.Net Core/Bonus/Application/Application/Application.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Chapter3\Chapter3.Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\..\Chapter4\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
