--- a/TestGroup/Test/TestBackupMysql/TestBackupMysql.csproj
+++ b/TestGroup/Test/TestBackupMysql/TestBackupMysql.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MySqlBackup.NET" Version="2.3.8" />
+    <PackageReference Include="SharpZipLib" Version="1.4.2" />
   </ItemGroup>
 
 </Project>
