--- a/TestGroup/Test/TestReoGrid/TestReoGrid.csproj
+++ b/TestGroup/Test/TestReoGrid/TestReoGrid.csproj
@@ -13,7 +13,9 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="ekra-ltd.ReoGridWPF.dll" Version="3.1.3" />
 		<PackageReference Include="HandyControl" Version="3.5.1" />
+		<PackageReference Include="Mapster" Version="7.4.0" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.7" />
 	</ItemGroup>
 
 </Project>
