--- a/TestGroup/Test/TestReoGrid/TestReoGrid.csproj
+++ b/TestGroup/Test/TestReoGrid/TestReoGrid.csproj
@@ -18,4 +18,8 @@
 		<PackageReference Include="System.Drawing.Common" Version="8.0.7" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\ReoGrid.Mvvm\ReoGrid.Mvvm.csproj" />
+	</ItemGroup>
+
 </Project>
